Se da estilos a -Home, cripto, criptopage y menu-

--- a/src/componentes/Cripto/Cripto.css
+++ b/src/componentes/Cripto/Cripto.css
@@ -1,8 +1,10 @@
 .cripto {
+    background: rgba(255, 255, 255, 0.04);
     border: 1px solid skyblue;
     border-left: 10px solid skyblue;
     border-radius: 1em;
     padding: 1rem;
+    transition: all .25s;
 }
 
 .info {
@@ -19,4 +21,15 @@
 
 .negativo {
     color: red;
+}
+
+.cripto:hover {
+    background: rgba(255, 255, 255, 0.08);
+    border: 1px solid rgba(255, 255, 255, 0.4);
+    box-shadow: 0px 12px 12px rgba(0, 0, 0, 0.35);
+  }
+
+.cripto h2, .cripto a {
+color: white;
+text-decoration: none;
 }
