--- a/src/main.css
+++ b/src/main.css
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
+
 html {
     box-sizing: border-box;
     font-size: 16px;
     color: white;
-    font-family: Trebuchet MS, Lucida Sans Unicode;
+    font-family: IBM Plex Mono, Trebuchet MS, Lucida Sans Unicode;
 }
 
 *, *:before, *:after {
@@ -16,13 +20,14 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
 }
 
 img {
-    max-width: 0;
-    margin: 0;
+    max-width: 100%;
+    height: auto;
 }
 
 body {
     background: rgb(0,15,22);
-    background: linear-gradient(#0f0c29, #302b63, #24243e);
+    background: linear-gradient(180deg, #171837 0%, #181F38 60.42%, #182438 100%);
+    min-height: 98vh;
 }
 
 h1 {
